<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">R-SHAREIT</string>
    <string name="app_caps"></string>
    <string name="app_exp">SHARE YOUR FILES</string>
    <string name="app_gap"></string>

    <!-- Transfer activity -->
    <string name="activity_transfer_empty_text">No transfers in progress</string>
    <string name="activity_transfer_navigation_drawer_open">Open navigation drawer</string>
    <string name="activity_transfer_navigation_drawer_close">Close navigation drawer</string>

    <!-- Transfer menu -->
    <string name="menu_transfer_title">R-SHAREIT</string>
    <string name="menu_transfer_subtitle">Device: %1$s</string>
    <string name="menu_transfer_item_send">Share Files</string>
    <string name="menu_transfer_item_recieved">Received Files</string>
    <string name="menu_transfer_item_settings">Settings</string>
    <string name="menu_transfer_item_about">About</string>
    <string name="menu_transfer_item_exit">Exit</string>
    <string name="menu_transfer_item_instructions">Instructions</string>

    <!-- Intro activity -->
    <string name="activity_intro_intro_title">Introduction</string>
    <string name="activity_intro_intro_description">R-SHAREIT makes it easy to send files to other devices on your local network.</string>
    <string name="activity_intro_share_title">Sending Files</string>
    <string name="activity_intro_share_description">Send files with R-SHAREIT from other Android applications like Gallery, Google Docs, and Google Photos.</string>
    <string name="activity_intro_desktop_title">Desktop App</string>
    <string name="activity_intro_desktop_description">R-SHAREIT for Android works with the desktop app, which is available for Windows, MacOS, and Linux.</string>
    <string name="activity_intro_desktop_button">Visit Website</string>
    <string name="activity_intro_perms_title">Permission</string>
    <string name="activity_intro_perms_description">In order to send and receive files, R-SHAREIT needs your permission to read and write files on your Android device.</string>

    <!-- Explorer activity -->
    <string name="activity_explorer">Send Items</string>
    <string name="activity_explorer_internal">Internal Storage</string>
    <string name="activity_explorer_removable">Removable Storage (%1$s)</string>
    <string name="activity_explorer_hint">Long press to send multiple items</string>
    <string name="activity_explorer_error">Unable to open directory:\n%1$s</string>
    <string name="activity_explorer_kb">%1$d KB</string>
    <string name="activity_explorer_mb">%1$d MB</string>
    <string name="activity_explorer_gb">%1$d GB</string>

    <string name="menu_explorer_actions_send">Send</string>
    <string name="menu_explorer_options_show_hidden">Show Hidden Items</string>

    <!-- Share activity -->
    <string name="activity_share">Send with R-SHAREIT</string>
    <string name="activity_share_label">Select a device from the list below to receive the transfer:</string>
    <string name="activity_share_intent">R-SHAREIT cannot send the data it has received from a third-party application.</string>
    <string name="activity_share_permissions">R-SHAREIT cannot transfer data without permission to access storage.</string>

    <!-- Settings activity -->
    <string name="activity_settings">Settings</string>
    <string name="activity_settings_category_general">General</string>
    <string name="activity_settings_category_appearance">Appearance</string>
    <string name="activity_settings_pref_device_name">Device Name</string>
    <string name="activity_settings_pref_transfer_directory">Transfer Directory</string>
    <string name="activity_settings_pref_behavior_receive">Receive Transfers</string>
    <string name="activity_settings_pref_behavior_receive_summary">Accept incoming transfers from other devices</string>
    <string name="activity_settings_pref_behavior_overwrite">Overwrite</string>
    <string name="activity_settings_pref_behavior_overwrite_summary">Replace existing files with the same name</string>
    <string name="activity_settings_category_notifications">Notifications</string>
    <string name="activity_settings_pref_notification_sound">Notification Sound</string>
    <string name="activity_settings_pref_notification_sound_summary">Play sound when a transfer completes</string>
    <string name="activity_settings_darkTheme" translatable="false">Dark theme</string>
    <string name="activity_settings_darkTheme_summary" translatable="false">Enable the alternate dark theme instead of the standard light theme</string>

    <!-- Directory fragment -->
    <string name="dialog_directory_message">Tap on a directory name to open it. Long press to select.</string>
    <string name="dialog_directory_select">Select</string>

    <!-- About activity -->
    <string name="activity_about">About</string>
    <string name="activity_about_subtitle">Cross-platform file transfer application</string>
    <string name="activity_about_version">Version: 01</string>
    <string name="activity_about_last_updated">Last Updated:</string>
    <string name="activity_about_license" tools:ignore="TypographyOther">
        "This app is to share files between two devices with “peer-to-peer” connection"
   </string>
    <string name="str_branch">MS-CS</string>
    <string name="school">School of Computer Science and Applications</string>

    <!-- Transfer service -->
    <string name="service_transfer_title">R-SHAREIT Transfer</string>
    <string name="service_transfer_action_stop">Stop</string>
    <string name="service_transfer_action_retry">Retry</string>
    <string name="service_transfer_server_title">R-SHAREIT Service</string>
    <string name="service_transfer_server_listening_text">Listening for incoming transfers</string>
    <string name="service_transfer_status_connecting">Connecting to %1$s…</string>
    <string name="service_transfer_status_receiving">Receiving items from %1$s…</string>
    <string name="service_transfer_status_sending">Sending items to %1$s…</string>
    <string name="service_transfer_status_success">Transfer with %1$s completed</string>
    <string name="service_transfer_status_error">Transfer with %1$s failed: %2$s</string>
    <string name="service_transfer_unknown_device">[unknown]</string>
    <string name="service_transfer_notification_url">URL</string>

    <!-- Transfer notification manager -->
    <string name="channel_service_name">Transfer Service</string>
    <string name="channel_transfer_name">Ongoing Transfers</string>
    <string name="channel_notification_name">Transfer Completion</string>

    <!-- Transfer adapter -->
    <string name="adapter_transfer_connecting">Connecting…</string>
    <string name="adapter_transfer_transferring">Transferring: %1$d%%</string>
    <string name="adapter_transfer_failed">Failed: %1$s</string>
    <string name="adapter_transfer_succeeded">Succeeded</string>
    <string name="adapter_transfer_unknown">unknown</string>
    <string name="adapter_transfer_bytes">%1$s / %2$s</string>
    <string name="adapter_transfer_stop">Stop</string>
    <string name="adapter_transfer_retry">Retry</string>
    <string name="connected_device">Connected Devices</string>
    <string name="str_name">Name</string>
    <string name="str_connect_device_count">Connected Device</string>
    <string name="str_0">0</string>
    <string name="str_receive_file">Received File</string>
    <string name="str_save_stream">Save Traffic</string>

    <string name="str_about_me_desc">Developed By：Pooja K Jagadeesh, MS-CS</string>
    <string name="str_about_me_email">Email:poojakjagadheesh@gmail.com</string>
    <string name="str_weiguan">Check</string>
    <string name="str_univ">Reva University</string>
    <string name="str_sch">School of Computer Science and Applications</string>
    <string name="str_school">REVA University</string>
    <string name="activity_instructions">Instructions</string>
    <string name="str_steps">STEPS:</string>
    <string name="str_step1"> ">" Switch on the hotspot  and make sure both device1 and device2 are connected through hotspot</string>
    <string name="str_step2"> ">" Open R-SHAREIT Application</string>
    <string name="str_step3"> ">" Select the files to be shared using the send icon on the screen</string>
    <string name="str_step4"> ">" Find your Received files by default "/downloads/RshareIT/" directory</string>
    <string name="str_note">Find your Received file in "/downloads/RshareIT/" directory</string>



</resources>
