<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="362dp"
        android:layout_height="75dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="106dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="154dp"
            android:layout_marginBottom="53dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="154dp"
            android:layout_marginTop="-50dp"
            android:layout_marginBottom="28dp"
            android:text="@string/activity_about_subtitle"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="10sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="354dp"
        android:background="@color/colorIconDark"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lastUpdated"
            android:layout_width="118dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/colorIconDark"
            android:text="@string/str_steps"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="261dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:background="@color/colorIconDark"
            android:text="@string/str_step1"
            android:textColor="@color/black" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="255dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:background="@color/colorIconDark"
            android:text="@string/str_step2"
            android:textColor="@color/black" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="255dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:background="@color/colorIconDark"
            android:text="@string/str_step3"
            android:textColor="@color/black" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="258dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:background="@color/colorIconDark"
            android:text="@string/str_step4"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
